@@ -289,6 +289,7 @@ AC_OUTPUT([
 	tests/Makefile
 	tests/bigtest/Makefile
 	tests/unit/Makefile
+	tests/tut/Makefile
 	tests/xmltester/Makefile
 	tools/Makefile
 	tools/geos-config
