@@ -1,0 +1,4 @@
+EXTRA_DIST = 			\
+	tut.h			\
+	tut_reporter.h		\
+	tut_restartable.h
